--- a/SegAny-Cleaner.ipynb
+++ b/SegAny-Cleaner.ipynb
@@ -77,8 +77,8 @@
     "import cv2\n",
     "\n",
     "# --- アプリケーション情報 ---\n",
-    "# VERSION = \"1.0.3\"\n",
-    "VERSION = \"1.0.4\"\n",
+    "# バグ修正とUI微調整を反映したVer 1.1.0\n",
+    "VERSION = \"1.1.0\"\n",
     "\n",
     "# --- 環境設定 ---\n",
     "os.environ['MPLBACKEND'] = 'Agg'\n",
@@ -128,7 +128,9 @@
     "\n",
     "    def handle_upload(self, file_obj):\n",
     "        if not file_obj: return None\n",
-    "        self.current_filename = os.path.basename(file_obj.name)\n",
+    "        # 拡張子を強制的に .png に変更\n",
+    "        base_name = os.path.splitext(os.path.basename(file_obj.name))[0]\n",
+    "        self.current_filename = f\"{base_name}.png\"\n",
     "        shutil.copy(file_obj.name, self.active_image_path)\n",
     "        return Image.open(self.active_image_path)\n",
     "\n",
@@ -137,7 +139,16 @@
     "        self.load_model(model_name, p_side, iou_th, stab_th, min_area)\n",
     "        orig_pil = Image.open(self.active_image_path).convert(\"RGB\")\n",
     "        img_np = np.array(orig_pil)\n",
-    "        masks = self.generator.generate(img_np)\n",
+    "        \n",
+    "        try:\n",
+    "            masks = self.generator.generate(img_np)\n",
+    "            if not masks:\n",
+    "                print(\"Warning: No masks detected.\")\n",
+    "                return None\n",
+    "        except Exception as e:\n",
+    "            print(f\"SAM2 Segmentation Error: {e}\")\n",
+    "            return None\n",
+    "\n",
     "        overlay = np.zeros_like(img_np)\n",
     "        for i, m in enumerate(masks):\n",
     "            color = [(i*47)%230+20, (i*97)%230+20, (i*149)%230+20]\n",
@@ -147,7 +158,7 @@
     "        blended = Image.blend(seg_pil, orig_pil, 0.4)\n",
     "        return blended\n",
     "\n",
-    "    def make_mask(self, sketch_data, invert, smooth, expand, blur):\n",
+    "    def make_mask(self, sketch_data, invert, smooth, expand):\n",
     "        if sketch_data is None: return None\n",
     "        draw_img = sketch_data.get(\"mask\") if isinstance(sketch_data, dict) else sketch_data\n",
     "        seg_file = os.path.join(WORKDIR, \"segments.png\")\n",
@@ -161,19 +172,13 @@
     "        mask = np.zeros(seg_np.shape[:2], dtype=np.uint8)\n",
     "        for c in target_colors: mask[np.all(seg_np == c, axis=-1)] = 255\n",
     "        \n",
-    "        # --- 修正点：int変換を念のため追加 ---\n",
     "        if smooth > 0:\n",
     "            s_val = int(smooth) * 2 + 1\n",
     "            mask = cv2.GaussianBlur(mask, (s_val, s_val), 0); _, mask = cv2.threshold(mask, 128, 255, cv2.THRESH_BINARY)\n",
-    "        \n",
     "        if expand != 0:\n",
     "            e_val = int(abs(expand))\n",
     "            k = np.ones((e_val, e_val), np.uint8)\n",
     "            mask = cv2.dilate(mask, k) if expand > 0 else cv2.erode(mask, k)\n",
-    "            \n",
-    "        if blur > 0:\n",
-    "            b_val = int(blur) * 2 + 1\n",
-    "            mask = cv2.GaussianBlur(mask, (b_val, b_val), 0)\n",
     "            \n",
     "        if invert: mask = cv2.bitwise_not(mask)\n",
     "        mask_pil = Image.fromarray(mask).convert(\"RGB\")\n",
@@ -182,7 +187,7 @@
     "        blended = Image.blend(mask_pil, orig_img, 0.5)\n",
     "        return blended\n",
     "\n",
-    "    def run_crop(self, edited_mask_data, final_invert):\n",
+    "    def run_crop(self, edited_mask_data, final_invert, crop_blur):\n",
     "        if not edited_mask_data or not os.path.exists(self.active_image_path): return None, None\n",
     "        gen_mask_path = os.path.join(WORKDIR, \"mask_generated.png\")\n",
     "        if not os.path.exists(gen_mask_path): return None, None\n",
@@ -194,14 +199,24 @@
     "            final_mask_np = gen_mask_np\n",
     "        if final_invert:\n",
     "            final_mask_np = cv2.bitwise_not(final_mask_np)\n",
+    "\n",
+    "        if crop_blur > 0:\n",
+    "            b_val = int(crop_blur) * 2 + 1\n",
+    "            final_mask_np = cv2.GaussianBlur(final_mask_np, (b_val, b_val), 0)\n",
+    "\n",
     "        Image.fromarray(final_mask_np).save(os.path.join(WORKDIR, \"mask_edited.png\"))\n",
     "        orig = np.array(Image.open(self.active_image_path).convert(\"RGB\"))\n",
     "        if orig.shape[:2] != final_mask_np.shape:\n",
     "            final_mask_np = cv2.resize(final_mask_np, (orig.shape[1], orig.shape[0]))\n",
-    "        res = cv2.bitwise_and(orig, orig, mask=final_mask_np)\n",
+    "        \n",
+    "        # RGBAで透過処理\n",
+    "        res_rgba = cv2.cvtColor(orig, cv2.COLOR_RGB2RGBA)\n",
+    "        res_rgba[:, :, 3] = final_mask_np \n",
+    "\n",
     "        out_path = os.path.join(WORKDIR, self.current_filename)\n",
-    "        Image.fromarray(res).save(out_path)\n",
-    "        return Image.fromarray(res), out_path\n",
+    "        # 保存形式をPNGに強制（RGBA維持のため）\n",
+    "        Image.fromarray(res_rgba).save(out_path, format=\"PNG\")\n",
+    "        return Image.fromarray(res_rgba), out_path\n",
     "\n",
     "handler = SAM2Handler()\n",
     "version_info = f\"torch: {torch.__version__} | torchvision: {torchvision.__version__} | torchaudio: {torchaudio.__version__} | gradio: {gr.__version__}\"\n",
@@ -223,14 +238,17 @@
     "            gr.Markdown(\"### 2. 切り抜き作業\")\n",
     "            seg_view = gr.Image(label=\"解析画像（切り抜き部分をなぞる）\", tool=\"sketch\", type=\"pil\", interactive=True, elem_classes=\"padded-image\")\n",
     "            with gr.Accordion(\"マスク調整\", open=False):\n",
-    "                # --- 修正点：step=1 を設定して整数入力に限定 ---\n",
     "                inv = gr.Checkbox(label=\"反転\")\n",
     "                sm = gr.Slider(0, 20, 0, step=1, label=\"滑らか\")\n",
     "                ex = gr.Slider(-20, 20, 0, step=1, label=\"拡張\")\n",
-    "                bl = gr.Slider(0, 20, 0, step=1, label=\"ぼかし\")\n",
     "            mask_btn = gr.Button(\"マスク生成\", variant=\"primary\")\n",
     "            mask_view = gr.Image(label=\"マスク生成結果（消しゴム編集可能）\", tool=\"sketch\", type=\"pil\", interactive=True, elem_classes=\"padded-image\")\n",
-    "            final_inv_chk = gr.Checkbox(label=\"切り抜き時にマスクを反転（背景を消す/残す）\", value=False)\n",
+    "            \n",
+    "            # デフォルトで閉じる設定 (open=False)\n",
+    "            with gr.Accordion(\"切り抜き調整\", open=False):\n",
+    "                final_inv_chk = gr.Checkbox(label=\"切り抜き時にマスクを反転\", value=False)\n",
+    "                crop_blur = gr.Slider(0, 20, 0, step=1, label=\"ぼかし (px)\")\n",
+    "            \n",
     "            crop_btn = gr.Button(\"切り抜き実行\", variant=\"primary\")\n",
     "            result_view = gr.Image(label=\"結果画像\", type=\"pil\", interactive=False)\n",
     "            result_file = gr.File(label=\"保存\")\n",
@@ -245,14 +263,12 @@
     "        handler.run_segment, [model_drop, p_side, iou_th, stab_th, min_area], seg_view, show_progress=True\n",
     "    )\n",
     "    mask_btn.click(lambda: None, None, mask_view).then(\n",
-    "        handler.make_mask, [seg_view, inv, sm, ex, bl], mask_view, show_progress=True\n",
+    "        handler.make_mask, [seg_view, inv, sm, ex], mask_view, show_progress=True\n",
     "    )\n",
-    "    \n",
     "    crop_btn.click(\n",
-    "        handler.run_crop, [mask_view, final_inv_chk], [result_view, result_file], show_progress=True\n",
+    "        handler.run_crop, [mask_view, final_inv_chk, crop_blur], [result_view, result_file], show_progress=True\n",
     "    )\n",
-    "\n",
-    "    reset_btn.click(lambda: [None] * 6 + [False], None, [input_file, input_preview, seg_view, mask_view, result_view, result_file, final_inv_chk])\n",
+    "    reset_btn.click(lambda: [None] * 6 + [False, 0], None, [input_file, input_preview, seg_view, mask_view, result_view, result_file, final_inv_chk, crop_blur])\n",
     "\n",
     "demo.launch(server_name=\"0.0.0.0\", share=True)"
    ]
