--- a/SegAny-Cleaner.ipynb
+++ b/SegAny-Cleaner.ipynb
@@ -34,15 +34,21 @@
     "os.environ['HUGGINGFACE_HUB_CACHE'] = model_cache_dir\n",
     "\n",
     "# 仮想環境の作成とライブラリインストール\n",
+    "# --system-site-packages でシステム側の高速なTorchを継承\n",
     "if not os.path.exists(venv_path):\n",
-    "    print(\"Creating virtual environment...\")\n",
-    "    !python3 -m venv {venv_path}\n",
+    "    print(\"Creating virtual environment with system-site-packages...\")\n",
+    "    !python3 -m venv --system-site-packages {venv_path}\n",
+    "    \n",
+    "# 仮想環境の作成とライブラリインストール\n",
+    "#if not os.path.exists(venv_path):\n",
+    "#    print(\"Creating virtual environment...\")\n",
+    "#    !python3 -m venv {venv_path}\n",
     "\n",
     "print(\"Installing dependencies...\")\n",
     "!{venv_path}/bin/pip install --upgrade pip\n",
     "\n",
     "# PaperspaceのCUDA環境に合わせたPyTorchを明示的にインストール\n",
-    "!{venv_path}/bin/pip install torch torchvision torchaudio\n",
+    "#!{venv_path}/bin/pip install torch torchvision torchaudio\n",
     "!{venv_path}/bin/pip install gradio==3.41.2 opencv-python numpy Pillow\n",
     "\n",
     "# SAM2本体\n",
@@ -70,15 +76,15 @@
     "import urllib.request\n",
     "import torch\n",
     "import torchvision\n",
-    "import torchaudio\n",
+    "# import torchaudio  # 依存関係エラー回避のため除外\n",
     "import gradio as gr\n",
     "from PIL import Image, ImageChops\n",
     "import numpy as np\n",
     "import cv2\n",
     "\n",
     "# --- アプリケーション情報 ---\n",
-    "# バグ修正とUI微調整を反映したVer 1.1.0\n",
-    "VERSION = \"1.1.0\"\n",
+    "# Ver 1.1.1: torchaudio依存の削除、RGBA保存エラー修正、UI微調整\n",
+    "VERSION = \"1.1.1\"\n",
     "\n",
     "# --- 環境設定 ---\n",
     "os.environ['MPLBACKEND'] = 'Agg'\n",
@@ -128,7 +134,6 @@
     "\n",
     "    def handle_upload(self, file_obj):\n",
     "        if not file_obj: return None\n",
-    "        # 拡張子を強制的に .png に変更\n",
     "        base_name = os.path.splitext(os.path.basename(file_obj.name))[0]\n",
     "        self.current_filename = f\"{base_name}.png\"\n",
     "        shutil.copy(file_obj.name, self.active_image_path)\n",
@@ -139,7 +144,6 @@
     "        self.load_model(model_name, p_side, iou_th, stab_th, min_area)\n",
     "        orig_pil = Image.open(self.active_image_path).convert(\"RGB\")\n",
     "        img_np = np.array(orig_pil)\n",
-    "        \n",
     "        try:\n",
     "            masks = self.generator.generate(img_np)\n",
     "            if not masks:\n",
@@ -148,7 +152,6 @@
     "        except Exception as e:\n",
     "            print(f\"SAM2 Segmentation Error: {e}\")\n",
     "            return None\n",
-    "\n",
     "        overlay = np.zeros_like(img_np)\n",
     "        for i, m in enumerate(masks):\n",
     "            color = [(i*47)%230+20, (i*97)%230+20, (i*149)%230+20]\n",
@@ -171,7 +174,6 @@
     "        target_colors.discard((0,0,0))\n",
     "        mask = np.zeros(seg_np.shape[:2], dtype=np.uint8)\n",
     "        for c in target_colors: mask[np.all(seg_np == c, axis=-1)] = 255\n",
-    "        \n",
     "        if smooth > 0:\n",
     "            s_val = int(smooth) * 2 + 1\n",
     "            mask = cv2.GaussianBlur(mask, (s_val, s_val), 0); _, mask = cv2.threshold(mask, 128, 255, cv2.THRESH_BINARY)\n",
@@ -179,7 +181,6 @@
     "            e_val = int(abs(expand))\n",
     "            k = np.ones((e_val, e_val), np.uint8)\n",
     "            mask = cv2.dilate(mask, k) if expand > 0 else cv2.erode(mask, k)\n",
-    "            \n",
     "        if invert: mask = cv2.bitwise_not(mask)\n",
     "        mask_pil = Image.fromarray(mask).convert(\"RGB\")\n",
     "        mask_pil.save(os.path.join(WORKDIR, \"mask_generated.png\"))\n",
@@ -199,27 +200,21 @@
     "            final_mask_np = gen_mask_np\n",
     "        if final_invert:\n",
     "            final_mask_np = cv2.bitwise_not(final_mask_np)\n",
-    "\n",
     "        if crop_blur > 0:\n",
     "            b_val = int(crop_blur) * 2 + 1\n",
     "            final_mask_np = cv2.GaussianBlur(final_mask_np, (b_val, b_val), 0)\n",
-    "\n",
     "        Image.fromarray(final_mask_np).save(os.path.join(WORKDIR, \"mask_edited.png\"))\n",
     "        orig = np.array(Image.open(self.active_image_path).convert(\"RGB\"))\n",
     "        if orig.shape[:2] != final_mask_np.shape:\n",
     "            final_mask_np = cv2.resize(final_mask_np, (orig.shape[1], orig.shape[0]))\n",
-    "        \n",
-    "        # RGBAで透過処理\n",
     "        res_rgba = cv2.cvtColor(orig, cv2.COLOR_RGB2RGBA)\n",
     "        res_rgba[:, :, 3] = final_mask_np \n",
-    "\n",
     "        out_path = os.path.join(WORKDIR, self.current_filename)\n",
-    "        # 保存形式をPNGに強制（RGBA維持のため）\n",
     "        Image.fromarray(res_rgba).save(out_path, format=\"PNG\")\n",
     "        return Image.fromarray(res_rgba), out_path\n",
     "\n",
     "handler = SAM2Handler()\n",
-    "version_info = f\"torch: {torch.__version__} | torchvision: {torchvision.__version__} | torchaudio: {torchaudio.__version__} | gradio: {gr.__version__}\"\n",
+    "version_info = f\"torch: {torch.__version__} | torchvision: {torchvision.__version__} | gradio: {gr.__version__}\"\n",
     "\n",
     "with gr.Blocks(css=css) as demo:\n",
     "    gr.Markdown(f\"# SAM2 画像切り抜きツール（Ver{VERSION}）\")\n",
@@ -238,17 +233,12 @@
     "            gr.Markdown(\"### 2. 切り抜き作業\")\n",
     "            seg_view = gr.Image(label=\"解析画像（切り抜き部分をなぞる）\", tool=\"sketch\", type=\"pil\", interactive=True, elem_classes=\"padded-image\")\n",
     "            with gr.Accordion(\"マスク調整\", open=False):\n",
-    "                inv = gr.Checkbox(label=\"反転\")\n",
-    "                sm = gr.Slider(0, 20, 0, step=1, label=\"滑らか\")\n",
-    "                ex = gr.Slider(-20, 20, 0, step=1, label=\"拡張\")\n",
+    "                inv = gr.Checkbox(label=\"反転\"); sm = gr.Slider(0, 20, 0, step=1, label=\"滑らか\"); ex = gr.Slider(-20, 20, 0, step=1, label=\"拡張\")\n",
     "            mask_btn = gr.Button(\"マスク生成\", variant=\"primary\")\n",
     "            mask_view = gr.Image(label=\"マスク生成結果（消しゴム編集可能）\", tool=\"sketch\", type=\"pil\", interactive=True, elem_classes=\"padded-image\")\n",
-    "            \n",
-    "            # デフォルトで閉じる設定 (open=False)\n",
     "            with gr.Accordion(\"切り抜き調整\", open=False):\n",
     "                final_inv_chk = gr.Checkbox(label=\"切り抜き時にマスクを反転\", value=False)\n",
     "                crop_blur = gr.Slider(0, 20, 0, step=1, label=\"ぼかし (px)\")\n",
-    "            \n",
     "            crop_btn = gr.Button(\"切り抜き実行\", variant=\"primary\")\n",
     "            result_view = gr.Image(label=\"結果画像\", type=\"pil\", interactive=False)\n",
     "            result_file = gr.File(label=\"保存\")\n",
@@ -258,16 +248,9 @@
     "    def set_p(p): return {\"標準\":(32, 0.8, 0.92, 300), \"詳細\":(64, 0.5, 0.5, 100), \"軽量\":(16, 0.8, 0.95, 400)}[p]\n",
     "    preset.change(set_p, preset, [p_side, iou_th, stab_th, min_area])\n",
     "    input_file.change(handler.handle_upload, input_file, input_preview)\n",
-    "    \n",
-    "    run_btn.click(lambda: None, None, seg_view).then(\n",
-    "        handler.run_segment, [model_drop, p_side, iou_th, stab_th, min_area], seg_view, show_progress=True\n",
-    "    )\n",
-    "    mask_btn.click(lambda: None, None, mask_view).then(\n",
-    "        handler.make_mask, [seg_view, inv, sm, ex], mask_view, show_progress=True\n",
-    "    )\n",
-    "    crop_btn.click(\n",
-    "        handler.run_crop, [mask_view, final_inv_chk, crop_blur], [result_view, result_file], show_progress=True\n",
-    "    )\n",
+    "    run_btn.click(lambda: None, None, seg_view).then(handler.run_segment, [model_drop, p_side, iou_th, stab_th, min_area], seg_view, show_progress=True)\n",
+    "    mask_btn.click(lambda: None, None, mask_view).then(handler.make_mask, [seg_view, inv, sm, ex], mask_view, show_progress=True)\n",
+    "    crop_btn.click(handler.run_crop, [mask_view, final_inv_chk, crop_blur], [result_view, result_file], show_progress=True)\n",
     "    reset_btn.click(lambda: [None] * 6 + [False, 0], None, [input_file, input_preview, seg_view, mask_view, result_view, result_file, final_inv_chk, crop_blur])\n",
     "\n",
     "demo.launch(server_name=\"0.0.0.0\", share=True)"
